# new_checkout_ai

./: .editorconfig  .gitattributes  .gitignore  Dockerfile  ENV_TEMPLATE.md  app.py  automation_engine.py  debug_api.py  debug_stealth.py  demo_payment_flow.py  docker-compose.yml  enhancement_report.md  env.example.txt  fix_dependency.py  fix_variant.py  main_orchestrator.py  manual_test_flow.py  measure_flow.py  playwright_windows_wrapper.py  potential_applications_report.md  pyproject.toml  requirements.txt  sample_test_config.json  start.example  test_automation_endpoint.py  test_country_detection.py  test_india_phase1.py  test_user_system.py  verify_chrome_launch.py  verify_start.py
Documentation/: PAYMENT_INTEGRATION_GUIDE.md  country_detection_system.md  country_flow_explanation.md  debug_flow_complete.md  ui_migration_complete.md  walkthrough.md
agents/: browser_agent.py  critique_agent.py  llm_factory.py  llm_providers.py  orchestrator.py  planner_agent.py  unified_tools.py
backend/: auth_endpoints_TO_ADD.py  main.py  profile_endpoints_TO_ADD.py  run.py  wallet_orders_endpoints.py
frontend/: INSTALL_ROUTER.md  index.html  package-lock.json  package.json
phase1/: add_to_cart_robust.py  cart_navigator.py  universal_dom_finder.py
phase2/: ai_checkout_flow.py  checkout_dom_finder.py  checkout_flow.py  smart_form_filler.py
shared/: popup_dismisser.py  state_manager.py
special_sites/: __init__.py  dillards_automator.py  farfetch_automator.py  patagonia_handler.py  travismathew_automator.py  zara_automator.py
ui/: README_CONFIG.md  app.py  (+1 more)
(+403 files in other folders)
